--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "editor",
+    "rich text editor"
+  ],
+  "author": {
+    "name": "Franco RATOVOSON",
+    "email": "jean.franco.ratovoson@gmail.com"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^5.4.5"
+  }
 }
