--- a/examples/simple-editable/tsconfig.json
+++ b/examples/simple-editable/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "sourceMap": false,
+    "isolatedModules": true
   },
+  "include": ["src"],
   "exclude": ["node_modules","dist"]
 }
