--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@parcel/packager-ts": "2.12.0",
+    "@parcel/transformer-typescript-types": "2.12.0",
+    "parcel": "^2.12.0",
     "typescript": "^5.4.5"
   }
 }
