--- a/packages/editable/package.json
+++ b/packages/editable/package.json
@@ -6,12 +6,12 @@
   "main": "dist/main.js",
   "module": "dist/module.js",
   "types": "dist/types.d.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "watch": "parcel watch",
     "build": "parcel build"
-  },
-  "devDependencies": {
-    "parcel": "^2.12.0"
   },
   "license": "MIT"
 }
