--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "kanto",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "A monorepos for rich text editor tools",
   "keywords": [
     "editor",
     "rich text editor"
@@ -16,9 +12,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@parcel/packager-ts": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
+    "@types/node": "^20.12.12",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-perfectionist": "^2.10.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "parcel": "^2.12.0",
-    "typescript": "^5.4.5"
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0"
   }
 }
