--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "alwaysStrict": true,
     "skipLibCheck": true
   }
