style: add html to prettier formatting list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,9 @@
     "markdown"
   ],
   "eslint.onIgnoredFiles": "off",
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
