--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-prettier": "^5.1.3",
     "parcel": "^2.12.0",
+    "postcss": "^8.4.38",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
