--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@parcel/packager-ts": "2.12.0",
     "@parcel/transformer-typescript-types": "2.12.0",
     "@types/node": "^20.12.12",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
